Extended .gitignore file and sketched the steps to follow in README.md

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,9 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Terraform local files
+IaC/.terraform.lock.hcl
+IaC/.terraform/
+IaC/terraform.tfstate
+IaC/terraform.tfstate.backup
